# openhkl

./: .clang-format  .clang-tidy  .cproject  .gitattributes  .gitignore  .gitlab-ci.yml  .project  .pydevproject  AUTHORS  Bpb.cpp  Bpb.h  CHANGELOG  CITATION  CMakeLists.txt  Contributors.md  DeadTime.cpp  DeadTime.h  Doxyfile  HeCell.cpp  HeCell.h  INSTALL  InstrumentParameters.h.in  MAINTAINER  MetaData.h  Numor.cpp  NumorSet.cpp  NumorSet.h  OpenHKL.desktop.in  README.md  Readme.txt  Scan1D.h  Version.cmake  a.out  includes.txt  manifest.h.in  nsxtool.doxyfile  q  qh
apps/: CMakeLists.txt  ColorMap.cpp  ColorMap.h  ColorMapData.cpp  Main.cpp  MainWindow.cpp  MainWindow.h  NSXQt.qrc  NSXQtApp.cpp  NSXQtApp.h  NoteBook.cpp  NoteBook.h  nsxqt.pro.in
apps/CRYOPADAnalysis/: Bpb.cpp  Bpb.h  DeadTime.cpp  DeadTime.h  HeCell.cpp  HeCell.h  Main.cpp  Numor.cpp  Numor.h  NumorSet.cpp  NumorSet.h  Scan1D.cpp  Scan1D.h
apps/D19plotter/: D19plotter.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui
apps/LatticeRefiner/: CMakeLists.txt  CheckableComboBox.cpp  CheckableComboBox.h  CheckableComboBoxDelegate.cpp  CheckableComboBoxDelegate.h  ConstraintsModel.cpp  ConstraintsModel.h  LatticeRefiner.pro  MainWindow.cpp  MainWindow.h  MainWindow.ui
apps/NSXQt/: CMakeLists.txt  ColorMap.cpp  ColorMap.h  ConvolutionFilterTree.cpp  DetectorScene.cpp  DetectorScene.h  DialogConvolve.cpp  DialogFindUnitCell.cpp  DialogRefineUnitCell.cpp  DoubleTableItemDelegate.cpp  JobHandler.cpp  LatticeIndexer.cpp  LatticeIndexer.h  Logger.cpp  Main.cpp  MainWindow.cpp  MainWindow.h  NSXQt.pro  NSXQt.pro.in  NSXQt.qrc  NSXQtApp.cpp  NoteBook.h  NumorsConversionDialog.cpp  NumorsConversionDialog.h  Session.cpp  Session.h  dialogunitcellsolutions.ui  ui_ExperimentDialog.h  ui_dialogunitcellsolutions.h
apps/blendfiles/: IconUnitCell.blend2  NSXToolIcon.blend1  iconExperiment.blend  sortUpIcon.blend  sortUpIcon.blend2  splashScreen.blend1
apps/delegates/: DoubleItemDelegate.cpp  DoubleItemDelegate.h
apps/dialogs/: DialogAbsorption.cpp  DialogAbsorption.h  DialogCalibrateDistance.cpp  DialogCalibrateDistance.h  DialogExperiment.cpp  DialogExperiment.h  DialogHDF5Converter.cpp  DialogHDF5Converter.h  DialogIntegrate.cpp  DialogIntegrate.h  DialogIsotopesDatabase.cpp  DialogIsotopesDatabase.h  DialogMCAbsorption.cpp  DialogMCAbsorption.h  DialogPeakFilter.cpp  DialogPeakFilter.h  DialogPredictPeaks.cpp  DialogPredictPeaks.h  DialogRawData.cpp  DialogRawData.h  DialogShapeLibrary.cpp  DialogShapeLibrary.h  DialogSpaceGroup.cpp  DialogSpaceGroup.h  DialogTransformationMatrix.cpp  DialogTransformationMatrix.h  DialogUnitCellParameters.cpp  DialogUnitCellParameters.h
apps/frames/: FrameAutoIndexer.cpp  FrameAutoIndexer.h  FrameDetectorGlobalOffsets.cpp  FrameDetectorGlobalOffsets.h  FrameInstrumentStates.cpp  FrameInstrumentStates.h  FramePeakFinder.cpp  FramePeakFinder.h  FrameRefiner.cpp  FrameRefiner.h  FrameSampleGlobalOffsets.cpp  FrameSampleGlobalOffsets.h  FrameStatistics.cpp  FrameStatistics.h  FrameUserDefinedUnitCellIndexer.cpp  FrameUserDefinedUnitCellIndexer.h  NSXQFrame.cpp  NSXQFrame.h
apps/items/: CutLineGraphicsItem.cpp  CutLineGraphicsItem.h  CutSliceGraphicsItem.cpp  CutSliceGraphicsItem.h  CutterGraphicsItem.cpp  CutterGraphicsItem.h  EllipseMaskGraphicsItem.cpp  EllipseMaskGraphicsItem.h  MaskGraphicsItem.cpp  MaskGraphicsItem.h  PeakGraphicsItem.cpp  PeakGraphicsItem.h  PlottableGraphicsItem.cpp  PlottableGraphicsItem.h  SXGraphicsItem.cpp  SXGraphicsItem.h  SliceRectGraphicsItem.cpp  SliceRectGraphicsItem.h
apps/logger/: QtStreamWrapper.cpp  QtStreamWrapper.h
apps/models/: CollectedPeaksModel.cpp  CollectedPeaksModel.h  CrystalFaceItem.cpp  CrystalFaceItem.h  CrystalNodeItem.cpp  CrystalNodeItem.h  CrystalScene.cpp  CrystalScene.h  DataItem.cpp  DataItem.h  DetectorItem.cpp  DetectorItem.h  DetectorScene.cpp  DetectorScene.h  ExperimentItem.cpp  ExperimentItem.h  InspectableTreeItem.cpp  InspectableTreeItem.h  InstrumentItem.cpp  InstrumentItem.h  LibraryItem.cpp  LibraryItem.h  MetaTypes.h  NumorItem.cpp  NumorItem.h  PeakListItem.cpp  PeakListItem.h  PeaksItem.cpp  PeaksItem.h  PinItem.cpp  PinItem.h  RulerItem.cpp  RulerItem.h  SampleItem.cpp  SampleItem.h  SampleShapeItem.cpp  SampleShapeItem.h  SessionModel.cpp  SessionModel.h  SessionModelDelegate.cpp  (+9 more)
apps/nsxqt/: CMakeLists.txt  ColorMap.cpp  ColorMap.h  ColorMapData.cpp  DetectorScene.cpp  DetectorScene.h  DoubleTableItemDelegate.h  JobHandler.cpp  JobHandler.h  LatticeIndexer.cpp  LatticeIndexer.h  Logger.h  Main.cpp  MainWindow.cpp  MainWindow.h  NSXMenu.cpp  NSXMenu.h  NSXQt.pro.in  NSXQt.qrc  NSXQtApp.cpp  NSXQtApp.h  NoteBook.cpp  NoteBook.h
apps/opengl/: GLActor.cpp  GLActor.h  GLReciprocalLattice.cpp  GLReciprocalLattice.h  GLScene.cpp  GLScene.h  GLSphere.cpp  GLSphere.h  GLTrackball.cpp  GLTrackball.h  GLWidget.cpp  GLWidget.h
apps/plot/: PeakPlot.cpp  PeakPlot.h  PlotFactory.cpp  PlotFactory.h  SXPlot.cpp  SXPlot.h  SimplePlot.cpp  SimplePlot.h
apps/simulate/: CMakeLists.txt  simulate.cpp
apps/tree/: DetectorPropertyWidget.cpp  DetectorPropertyWidget.h  EmptyPropertyWidget.cpp  EmptyPropertyWidget.h  ExperimentTree.cpp  ExperimentTree.h  NumorPropertyWidget.cpp  NumorPropertyWidget.h  PeakListPropertyWidget.cpp  PeakListPropertyWidget.h  PeaksPropertyWidget.cpp  PeaksPropertyWidget.h  SamplePropertyWidget.cpp  SamplePropertyWidget.h  SampleShapePropertyWidget.cpp  SourcePropertyWidget.cpp  (+4 more)
base/: CMakeLists.txt
core/: CMakeLists.txt  Version.h.in
gui/: CMakeLists.txt  Main.cpp  MainWin.cpp  MainWin.h  MainWindow.cpp  MainWindow.h  mainwin.cpp  mainwin.h  nsxqt.pro.in
main/: CMakeLists.txt  main.cpp  resources.qrc
nsxlib/: CMakeLists.txt  Version.h.in
src/: CMakeLists.txt  DeadTime.cpp  HeCell.cpp  MetaData.cpp  Numor.cpp  Scan1D.cpp
swig/: CMakeLists.txt  doxy2swig.py  eigen.i  ignore.txt  pynsx.i  pynsx.i.in  pyohkl.i  run_test.py  search_headers.py  warnings.i
tables/: CMakeLists.txt
tests/: CMakeLists.txt  D10_ascii_example  TestILLAsciiMetaReader.cpp  TestRotAxis.cpp  suppressions  test1.cpp
(+4533 files in other folders)
