if(POLICY CMP0071)
  cmake_policy(SET CMP0071 NEW)
endif()

set(CMAKE_SWIG_OUTDIR ${CMAKE_CURRENT_BINARY_DIR})

include_directories(${CMAKE_SOURCE_DIR})
include_directories(${PYTHON_INCLUDE_DIRS})

set_property(SOURCE pynsx.i PROPERTY CPLUSPLUS ON)
set_property(SOURCE pynsx.i PROPERTY SWIG_MODULE_NAME pynsx)

# Set the core headers path at the swig level
get_directory_property(PYNSX_INCLUDE_DIRECTORIES INCLUDE_DIRECTORIES)
list(REMOVE_DUPLICATES PYNSX_INCLUDE_DIRECTORIES)
set(PYNSX_SWIG_INCLUDE_DIRECTORIES)
foreach(it ${PYNSX_INCLUDE_DIRECTORIES})
    set(PYNSX_SWIG_INCLUDE_DIRECTORIES ${PYNSX_SWIG_INCLUDE_DIRECTORIES} "-I${it}")
endforeach()
set_property(SOURCE pynsx.i PROPERTY SWIG_FLAGS ${PYNSX_SWIG_INCLUDE_DIRECTORIES})

if(${CMAKE_VERSION} VERSION_GREATER 3.8)
    swig_add_library(pynsx TYPE MODULE LANGUAGE python SOURCES pynsx.i)
else()
    swig_add_module(pynsx python pynsx.i)
endif()

swig_link_libraries(pynsx nsx ${PYTHON_LIBRARIES})

install(TARGETS ${SWIG_MODULE_pynsx_REAL_NAME} DESTINATION ${NSX_INSTALL_DIR}${PYTHON_SITE} COMPONENT LIB)
install(FILES ${CMAKE_CURRENT_BINARY_DIR}/pynsx.py DESTINATION ${NSX_INSTALL_DIR}${PYTHON_SITE} COMPONENT LIB)
